--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,18 @@
 </head>
 <body>
     <h1>Building Voice AI Agent From Scratch</h1>
-    <button onclick="sayHello()">Click Me</button>
+
+    <div style="display:flex; flex-direction:column; gap:10px; width: 20%;">
+        <input type="text" id="inputText" placeholder="enter your text" style="width: 300px; height: 30px; margin-bottom: 10px;"> 
+    <button onclick="generateAudio()">
+        Generate Voice
+    </button>
+
+    <audio id="audioPlayer" controls style="margin-top: 10px; display: none;" ></audio> 
+    </div>
+
+
+    <!-- <button onclick="sayHello()">Click Me</button> -->
     <script src="/static/script.js"></script>
 </body>
 </html>
