--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,8 @@
         </div>
 
         <div id="echoContainer" class="section-container">
-            <h2>Echo Bot</h2>
+            <h2>Echo Bot - Murf Voice</h2>
+            <p class="echo-description">Record your voice and hear it repeated back in Murf's voice!</p>
             <div class="button-group">
                 <button id="startrecording" class="record-button">Start Recording</button>
                 <button id="stoprecording" class="record-button" disabled>Stop Recording</button>
@@ -26,7 +27,7 @@
             <audio id="playback" controls></audio>
             <p id="uploadStatus" class="upload-status">Ready to record</p>
             <div id="transcription-container" class="transcription-container" style="display: none;">
-                <h3>Transcription:</h3>
+                <h3>What you said:</h3>
                 <p id="transcription-text"></p>
             </div>
         </div>
